# uw_robocup

./: .gitignore  .rosinstall  CMakeLists.txt  README.md  package.xml
challenge_storing_groceries/: CMakeLists.txt  package.xml  setup.py
common_states/: CMakeLists.txt  README.md  package.xml  setup.py
common_states/env-hooks/: common_states.sh
common_states/scripts/: run_state
common_states/states/common_states/check_grasped/: statemachine.json
common_states/states/common_states/check_grasped/check_grasped_OAPNJU/: core_data.json  script.py
common_states/states/common_states/go_to_named_poi/: core_data.json  script.py  statemachine.json
common_states/states/common_states/go_to_named_poi/go_to_named_poi_HGLHWO/: core_data.json  script.py
common_states/states/common_states/go_to_named_pose/: statemachine.json
common_states/states/common_states/go_to_named_pose/go_to_named_pose_HGLHWO/: core_data.json  script.py
common_states/states/common_states/go_to_pose/: statemachine.json
common_states/states/common_states/go_to_pose/go_to_pose_NXAMAO/: core_data.json  script.py
common_states/states/common_states/initialize_robot/: statemachine.json
common_states/states/common_states/initialize_robot/initialize_robot_UYWXTI/: core_data.json  script.py
common_states/states/common_states/locate_object/: statemachine.json
common_states/states/common_states/locate_object/locate_object_ESCGUK/: core_data.json  meta_data.json  script.py
common_states/states/common_states/move_arm/: statemachine.json
common_states/states/common_states/move_arm/move_arm_ZFOIXZ/: core_data.json  script.py
common_states/states/common_states/move_to_go/: statemachine.json
common_states/states/common_states/move_to_go/move_to_go_NVZNVP/: core_data.json  script.py
common_states/states/common_states/nav_goal/: statemachine.json
common_states/states/common_states/nav_goal/nav_goal_NXAMAO/: core_data.json  script.py
common_states/states/common_states/pick_up_graspable_object/: statemachine.json
common_states/states/common_states/pick_up_graspable_object/pick_up_graspable_object_ZFOIXZ/: core_data.json  meta_data.json  script.py
common_states/states/common_states/scan_for_graspable_object/: statemachine.json
common_states/states/common_states/scan_for_graspable_object/scan_for_graspable_object_ESCGUK/: core_data.json  script.py
common_states/states/common_states/speak/: statemachine.json
common_states/states/common_states/speak/speak_RNZULF/: core_data.json  script.py
common_states/states/common_states/test/: statemachine.json
common_states/states/common_states/tuck_arm/: statemachine.json
common_states/states/common_states/tuck_arm/tuck_arm_XEWKZE/: core_data.json  script.py
inspection/: CMakeLists.txt  package.xml  setup.py
inspection/env-hooks/: inspection.sh
inspection/scripts/: run_task
inspection/states/inspection/task/: statemachine.json
inspection/states/inspection/task/task_LYYRDC/: core_data.json  meta_data.json
task_storing_groceries/: CMakeLists.txt  package.xml  setup.py
task_storing_groceries/env-hooks/: task_storing_groceries.sh
task_storing_groceries/input_values/: pose.txt
task_storing_groceries/launch/: house_demo.launch
task_storing_groceries/scripts/: demo.py  run_task
task_storing_groceries/states/task_storing_groceries/check_obj_grasped/: statemachine.json
task_storing_groceries/states/task_storing_groceries/root_state/: statemachine.json
task_storing_groceries/states/task_storing_groceries/task/: statemachine.json
task_storing_groceries/test/: test.py
(+44 files in other folders)
