<?xml version="1.0"?>
<package format="2">
  <name>challenge_storing_groceries</name>
  <version>1.0.0</version>
  <description>
    Task code for the Storing Groceries RoboCup@Home challenge
  </description>
  <license>MIT</license>
  <maintainer email="robocup@cs.washington.edu">UW RoboCup Contributors</maintainer>
  <author email="robocup@cs.washington.edu">UW RoboCup Contributors</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>

</package>