<?xml version="1.0"?>
<package format="2">
  <name>task_storing_groceries</name>
  <version>1.0.0</version>
  <description>
    Code for the Storing Groceries RoboCup@Home challenge
  </description>
  <license>MIT</license>
  <maintainer email="robocup@cs.washington.edu">UW RoboCup Contributors</maintainer>
  <author email="robocup@cs.washington.edu">UW RoboCup Contributors</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>

</package>